# verisync

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  verisync.sh
.github/workflows/: build.yml  ci.yml  publish.yml
verisync/: __init__.py  _launcher.py
